# TextInserter

./: AUTHORS  README.md  TextInserter.cabal
src/: Main.hs
